# Quran-rag

./: README.md  build_faiss_index.py  main.py  pyproject.toml  quran_QA.py  requirements.txt  streamlit_quran_rag.py  streamlit_version.py
quran_faiss_index/: index.pkl
